tests/machine/x/ocaml/cast_string_to_int.error
File "/workspace/mochi/tests/machine/x/ocaml/cast_string_to_int.ml", line 22, characters 2-15:
22 |   print_endline int_of_string "1995";
       ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.
